# PRISM

./: .gitignore  README.md  dataloader.py  delight_model.ipynb  model.py  pyproject.toml  train.py  view_aug_data.ipynb
notebooks/: 01. Sersic_profiles.ipynb  01.Sersic_profiles.ipynb  02.Autolabeling.ipynb  02.View_autolabeling.ipynb  02.View_transformations.ipynb  03. View_transformations.ipynb  03.Generating_sersic_idx.ipynb  03.View_results.ipynb  03.View_transformations.ipynb  04. Comparisson_optimizated_dataset.ipynb  04.Generating_sersic_idx.ipynb  04.View_results.ipynb  05.View_results.ipynb  06. View_results.ipynb  06.Download_missing.ipynb  07. Generate_splits.ipynb  07.EDA.ipynb  08. From_pixel_to_coords.ipynb  08.Pasquet dataset.ipynb  09. Find_host.ipynb  09.Comparisson_optimizated_dataset.ipynb  10. Download_missing.ipynb  view_aug_data.ipynb  view_results.ipynb
optimus_prime/: dataloader.py  train.py
prism/: datamodule.py  model.py  model_old.py  train.py  train_old.py
resultados/delight/: curvas.npy  test_predictions.npy
resultados/delight_classic/: curvas.npy  test_predictions.npy
utils/: custom_datasets.py  download_augmented_dataset.py  download_multires_data.py  inverse_transformation.py  pasquet_model.py  plot_functions.py  sersic_functions.py
utils/download/: download_augmented_multires_data.py  download_multires_data.py  h2f_download_functions.py
utils/download_data/: download_augmented_multires_data.py  download_multires_data.py  download_multires_data_val.py  h2f_download_functions.py
