[project]
name = "PRISM"
version = "0.0.0"
description = "Thesis"
authors = [{name = "Alan Contreras Montanares"}]
readme = "README.md"
requires-python = ">=3.11,<3.13"

[tool.poetry.dependencies]
lightning = "*"
albumentations = "*"
matplotlib = "*"
pandas = "*"
astropy = "*"
astroquery = "*"
torch = "*"
timm = "*"
wandb = "*"
numpy = "<2"
tqdm = "^4.67.1"
rich = "^10.2.2"
plotly = "^6.3.0"
kaleido = "^1.0.0"
joblib = "^1.5.2"

[tool.poetry.group.dev.dependencies]
ruff = "*"
notebook = "*"
ipywidgets = "*"
pytest = "*"
pytest-cov = "*"
ipykernel = "*"
pipreqsnb = "^0.2.4"

[tool.ruff]
line-length = 128
lint.select = [
    "F",    # Pyflakes
    "E",    # Pycodestyle
    "W",
    "I",    # isort
    "N",    # pep8-naming
    "NPY",  # NumPy-specific rules
    "PERF", # Perflint
    "FURB", # refurb
    "PD",   # pandas-vet
    "RUF",  # Ruff-specific rules
]
lint.ignore = ["E402"]

[tool.pytest.ini_options]
addopts = "--doctest-modules --log-cli-format='%(asctime)s [%(levelname)7s] %(message)s (%(filename)s:%(lineno)s)' --log-cli-date-format='%Y-%m-%d %H:%M:%S'"
junit_family = "xunit2"
testpaths = ["tests"]
log_cli = true
log_cli_level = "INFO"
norecursedirs = ".venv"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
train = 'prism.train:main'
